feat: Ajustes endpoints y health check udistrital/argo_documentacion#133
