# src/clausula/clausula.controller.ts
@@ -4,8 +4,8 @@ import { CreateClausulaDto } from './dto/create-clausula.dto';
 import { ApiTags } from '@nestjs/swagger';
 import { FilterDto } from 'src/filters/dto/filters.dto';
 
-@ApiTags('clausula')
-@Controller('clausula')
+@ApiTags('clausulas')
+@Controller('clausulas')
 export class ClausulaController {
     constructor(
         private clausulaService: ClausulaService
@@ -17,14 +17,14 @@ export class ClausulaController {
         if (!clausula) {
             throw new HttpException({
                 Success: false,
-                Status: "400",
+                Status: 400,
                 Message: "Error service Post: The request contains an incorrect data type or an invalid parameter",
                 Data: null
             }, HttpStatus.BAD_REQUEST)
         }
         res.status(HttpStatus.CREATED).json({
             Success: true,
-            Status: "201",
+            Status: 201,
             Message: "Registration successful",
             Data: clausula
         });
@@ -36,14 +36,14 @@ export class ClausulaController {
             const clausula = await this.clausulaService.getAll(filterDto);
             res.status(HttpStatus.OK).json({
                 Success: true,
-                Status: "200",
+                Status: 200,
                 Message: "Request successful",
                 Data: clausula || []
             });
         } catch (error) {
             res.status(HttpStatus.INTERNAL_SERVER_ERROR).json({
                 Success: false,
-                Status: "500",
+                Status: 500,
                 Message: "An unexpected error occurred",
                 Data: null
             });
@@ -57,14 +57,14 @@ export class ClausulaController {
         if (!clausula) {
             throw new HttpException({
                 Success: false,
-                Status: "404",
+                Status: 404,
                 Message: "Error service GetOne: The request contains an incorrect parameter or no record exist",
                 Data: null
             }, HttpStatus.NOT_FOUND)
         }
         res.status(HttpStatus.OK).json({
             Success: true,
-            Status: "200",
+            Status: 200,
             Message: "Request successful",
             Data: clausula
         });
@@ -76,14 +76,14 @@ export class ClausulaController {
         if (!clausula) {
             throw new HttpException({
                 Success: false,
-                Status: "400",
+                Status: 400,
                 Message: "Error service Put: The request contains an incorrect data type or an invalid parameter",
                 Data: null
             }, HttpStatus.BAD_REQUEST)
         }
         res.status(HttpStatus.OK).json({
             Success: true,
-            Status: "200",
+            Status: 200,
             Message: "Update successful",
             Data: clausula
         });
@@ -95,14 +95,14 @@ export class ClausulaController {
         if (!clausula) {
             throw new HttpException({
                 Sucess: false,
-                Status: "404",
+                Status: 404,
                 Message: "Error service Delete: Request contains incorrect parameter",
                 Data: null
             }, HttpStatus.NOT_FOUND)
         }
         res.status(HttpStatus.OK).json({
             Success: true,
-            Status: "200",
+            Status: 200,
             Message: "Delete successful",
             Data: {
                 _id: id
