# src/orden_paragrafo/orden_paragrafo.controller.ts
@@ -4,8 +4,8 @@ import { CreateOrdenParagrafoDto } from './dto/create-orden_paragrafo.dto';
 import { ApiTags } from '@nestjs/swagger';
 import { FilterDto } from 'src/filters/dto/filters.dto';
 
-@ApiTags('orden_paragrafo')
-@Controller('orden_paragrafo')
+@ApiTags('orden-paragrafos')
+@Controller('orden-paragrafos')
 export class OrdenParagrafoController {
   constructor(
     private ordenParagrafoService: OrdenParagrafoService
@@ -17,14 +17,14 @@ async post(@Res() res, @Body() ordenParagrafoDto: CreateOrdenParagrafoDto) {
     if (!ordenParagrafo) {
         throw new HttpException({
             Success: false,
-            Status: "400",
+            Status: 400,
             Message: "Error service Post: The request contains an incorrect data type or an invalid parameter",
             Data: null
         }, HttpStatus.BAD_REQUEST)
     }
     res.status(HttpStatus.CREATED).json({
         Success: true,
-        Status: "201",
+        Status: 201,
         Message: "Registration successful",
         Data: ordenParagrafo
     });
@@ -36,14 +36,14 @@ async getAll(@Res() res, @Query() filterDto: FilterDto) {
         const ordenParagrafo = await this.ordenParagrafoService.getAll(filterDto);
         res.status(HttpStatus.OK).json({
             Success: true,
-            Status: "200",
+            Status: 200,
             Message: "Request successful",
             Data: ordenParagrafo || []
         });
     } catch (error) {
         res.status(HttpStatus.INTERNAL_SERVER_ERROR).json({
             Success: false,
-            Status: "500",
+            Status: 500,
             Message: "An unexpected error occurred",
             Data: null
         });
@@ -57,14 +57,14 @@ async getById(@Res() res, @Param('id') id: string) {
     if (!ordenParagrafo) {
         throw new HttpException({
             Success: false,
-            Status: "404",
+            Status: 404,
             Message: "Error service GetOne: The request contains an incorrect parameter or no record exist",
             Data: null
         }, HttpStatus.NOT_FOUND)
     }
     res.status(HttpStatus.OK).json({
         Success: true,
-        Status: "200",
+        Status: 200,
         Message: "Request successful",
         Data: ordenParagrafo
     });
@@ -76,14 +76,14 @@ async put(@Res() res, @Param('id') id: string, @Body() ordenParagrafoDto: Create
     if (!ordenParagrafo) {
         throw new HttpException({
             Success: false,
-            Status: "400",
+            Status: 400,
             Message: "Error service Put: The request contains an incorrect data type or an invalid parameter",
             Data: null
         }, HttpStatus.BAD_REQUEST)
     }
     res.status(HttpStatus.OK).json({
         Success: true,
-        Status: "200",
+        Status: 200,
         Message: "Update successful",
         Data: ordenParagrafo
     });
@@ -95,14 +95,14 @@ async delete(@Res() res, @Param('id') id: string) {
     if (!ordenParagrafo) {
         throw new HttpException({
             Sucess: false,
-            Status: "404",
+            Status: 404,
             Message: "Error service Delete: Request contains incorrect parameter",
             Data: null
         }, HttpStatus.NOT_FOUND)
     }
     res.status(HttpStatus.OK).json({
         Success: true,
-        Status: "200",
+        Status: 200,
         Message: "Delete successful",
         Data: {
             _id: id
